# easy-smpc

./: .gitignore  Cargo.toml  LICENSE  README.md  classDiagram.ucls  logging.properties  out.txt  performanceEvaluation  pom.xml
createInstaller/: createInstallerLinux.sh  createInstallerMacOS.sh  createInstallerWindows.bat
example/: step2_a.smpc  step2_b.smpc  step2_c.smpc  step2_d.smpc  step3_a.smpc  step3_b.smpc  step3_c.smpc  step3_d.smpc  step4_a.smpc  step4_b.smpc  step4_c.smpc  step4_d.smpc  step5_a.smpc  step5_b.smpc  step5_c.smpc  step5_d.smpc  step6_a.smpc  testcase PKU.txt
example-cli/: variables.xlsx
example-cli/sample-data/: data participant 1.xlsx  data participant 2.xlsx  data participant 3.xlsx  data participant 4.xlsx
gui/: email_smpc.glade
installer/: linux.sh  macos.sh  windows.bat
java/: pom.xml
rust/src/: main.rs  state.rs
sample-cli/: PKU comorbidities.xlsx
src/: arith.rs  inout.rs  main.rs  secret.rs  state.rs
src/main/java/de/tu_darmstadt/cbs/emailsmpc/: Bin.java  BinResult.java  Message.java  MessageInitial.java  MessageResult.java  MessageShare.java  Participant.java  Study.java
src/main/java/de/tu_darmstadt/cbs/secretshare/: ArithmeticShare.java  ArithmeticSharing.java
src/main/java/org/bihealth/mi/easybus/: .gitignore  Bus.java  BusException.java  BusMessage.java  BusMessageFragment.java  ConnectionSettings.java  Defaults.java  ErrorListener.java  InitialMessageManager.java  Message.java  MessageFilter.java  MessageFragment.java  Scope.java  (+7 more)
src/main/resources/: log4j2.xml  messages.properties  messages_de.properties
(+346 files in other folders)
